# StarfighterAlliance

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  TODO.md  asan.supp  pyproject.toml  vcpkg-configuration.json  vcpkg.json
.github/ISSUE_TEMPLATE/: config.yml
.github/badges/: coverage-badge.json
.github/workflows/: build.yml  cmake-multi-platform.yml  coverage.yml  linting.yml
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  DefaultProjectSettings.cmake  StaticAnalyzers.cmake  vcpkg-dependencies.cmake
docs/architecture/: JSONParsing.md  RenderingInfrastructure.md  ResourceLoading.md  ScreenSystem.md  WindowAndInputDesign.md
resources/config/: millenium_falcon.json  x_wing.json  y_wing.json
resources/shaders/: button.frag  button.vert
resources/textures/: SpaceshipColorPalette.aseprite  credits.txt  meteoriteColorPalette.aseprite  selection_hud.aseprite
resources/textures/alien/: alien001.aseprite
resources/textures/meteorite/: meteorite001.aseprite
resources/textures/millenium_falcon/: millenium_falcon_base.aseprite
resources/textures/x_wing/: x_wing_base.aseprite
resources/textures/y_wing/: y_wing_base.aseprite
scripts/: analyze_coverage.sh  code_coverage.sh  code_coverage_analysis.sh  coverage.py
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/engine/: Application.cpp  Application.hpp  CMakeLists.txt  Game.cpp  Game.hpp
src/engine/core/: Button.cpp  Button.hpp  Color.hpp  EndState.cpp  EndState.hpp  GameState.cpp  GameState.hpp  MenuState.cpp  MenuState.hpp  ParticleGenerator.cpp  ParticleGenerator.hpp  RenderContext.hpp  ResourceManager.cpp  Score.hpp  Shader.cpp  Shader.hpp  SpaceshipSelectionState.cpp  SpaceshipSelectionState.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  State.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  Utility.hpp  WindowInfo.hpp
src/engine/core/resourceManagement/: IResourceLoader.hpp  IntermediateResourceData.hpp  ResourceCache.hpp  ResourceContext.cpp  ResourceContext.hpp  ResourceError.hpp  ResourceLoader.cpp  ResourceLoader.hpp
src/engine/core/ui/: Anchor.hpp  Layout.cpp  Layout.hpp  LayoutElement.hpp  Size.hpp  VerticalLayout.cpp  VerticalLayout.hpp
src/engine/ecs/: ComponentArray.hpp  ComponentRegistry.hpp  ECSUtility.hpp  EntityFactory.hpp  EntityManager.cpp  EntityManager.hpp  IComponentArray.hpp
src/engine/ecs/components/: AnchorComponent.hpp  BoxColliderComponent.hpp  ButtonComponent.hpp  CircleColliderComponent.hpp  DamageComponent.hpp  HealthComponent.hpp  IComponent.hpp  LayoutComponent.hpp  RigidBodyComponent.hpp  SpriteComponent.hpp  TextComponent.hpp  TransformComponent.hpp  UIAnchorComponent.hpp  UIButtonComponent.hpp  UIHierarchyComponent.hpp  UILayoutComponent.hpp  UILayoutElementComponent.hpp  UITextFieldComponent.hpp  UITransformComponent.hpp  VelocityComponent.hpp
src/engine/ecs/systems/: ButtonSystem.cpp  ButtonSystem.hpp  LayoutSystem.cpp  LayoutSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  SpriteRenderSystem.cpp  SpriteRenderSystem.hpp  TextRenderSystem.cpp  TextRenderSystem.hpp  UIRenderSystem.cpp  UIRenderSystem.hpp  UITextFieldSystem.cpp  UITextFieldSystem.hpp  UITransformSystem.cpp  UITransformSystem.hpp
src/engine/gameObjects/: EnemyWave.cpp  EnemyWave.hpp  EnemyWaveGenerator.cpp  EnemyWaveGenerator.hpp  GameObject.hpp  MovementComponent.cpp  MovementComponent.hpp  ShootingComponent.cpp  ShootingComponent.hpp
src/engine/gameObjects/enemies/: Alien.cpp  Alien.hpp  Enemy.hpp  Meteorite.cpp  Meteorite.hpp
src/engine/gameObjects/spaceship/: Projectile.cpp  Projectile.hpp  Spaceship.cpp  Spaceship.hpp
src/engine/internal/: Button.cpp  Button.hpp  JSONReader.hpp  ParticleGenerator.cpp  ParticleGenerator.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  Websocket.cpp  Websocket.hpp
src/engine/screens/: IScreen.hpp  MenuScreen.cpp  MenuScreen.hpp  ScreenCommand.hpp  ScreenStack.cpp  ScreenStack.hpp
src/engine/utility/: BlockingQueue.hpp  Button.cpp  Button.hpp  GLFWWindow.cpp  GLFWWindow.hpp  IInputController.hpp  IWindow.hpp  InputController.hpp  ParticleGenerator.cpp  Shader.hpp  SpriteRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  ThreadPool.cpp  ThreadPool.hpp  Window.cpp  Window.hpp
src/engine/utility/details/: Threading.hpp
src/engine/utility/exceptions/: Exception.hpp  ResourceUnavailableException.hpp  WindowCreationException.hpp
src/engine/utility/resourceManagement/: ResourceCache.hpp  ResourceContext.cpp  ResourceContext.hpp
src/engine/utility/ui/: Layout.cpp  Layout.hpp  LayoutElement.hpp  VerticalLayout.cpp
src/engine/utility/userInput/: IInputController.hpp  InputController.cpp  InputController.hpp  InputEvent.hpp
src/test/: CMakeLists.txt  MockTexture.hpp  labelTests.cmake  my_test.cpp
src/test/core/: JSONReaderTest.cpp  ShaderTest.cpp  TextureTest.cpp
src/test/core/resourceManagement/: ResourceCacheTest.cpp  ResourceContextTest.cpp  ResourceLoaderTest.cpp
src/test/ecs/: ComponentArrayTest.cpp  ComponentRegistryTest.cpp  EntityManagerTest.cpp
src/test/ecs/systems/: UILayoutSystemTest.cpp  UITextFieldSystemTest.cpp  UITransformSystemTest.cpp
src/test/fixtures/: OpenGLTestFicture.hpp  OpenGLTestFixture.hpp
src/test/mocks/: MockOverlayScreen.hpp  MockResourceLoader.hpp  MockScreen.hpp  MockTexture.hpp
src/test/resources/: invalid.json
src/test/screens/: ScreenStackTest.cpp
src/test/testResources/json/: valid.json
src/test/testUtility/: RandomNumberGenerator.hpp  ResourceGenerator.hpp
src/test/utility/: BlockingQueueTest.cpp  ThreadPoolTest.cpp
src/test/utility/exceptions/: ExceptionTest.cpp  ResourceUnavailableExceptionTest.cpp  WindowCreationExceptionTest.cpp
src/test/utility/userInput/: InputControllerTest.cpp
vcpkg-ports/glad2cmake/: portfile.cmake  vcpkg.json
