set(NAME "StarfighterAllianceEngine")
include(${PROJECT_SOURCE_DIR}/cmake/StaticAnalyzers.cmake)

add_library(${NAME}
    ./core/Button.cpp
    ./core/ParticleGenerator.cpp
    ./core/Shader.cpp
    ./core/SpriteRenderer.cpp
    ./core/TextRenderer.cpp
    ./core/Texture.cpp
    ./core/resourceManagement/ResourceContext.cpp
    ./core/ui/Layout.cpp
    ./core/ui/VerticalLayout.cpp
    ./ecs/EntityManager.cpp
    ./ecs/systems/MovementSystem.cpp
    ./ecs/systems/SpriteRenderSystem.cpp
    ./ecs/systems/TextRenderSystem.cpp
)

target_sources(${NAME}
    PRIVATE
        FILE_SET HEADERS
        FILES
            ./core/Button.hpp
            ./core/ParticleGenerator.hpp
            ./core/Shader.hpp
            ./core/SpriteRenderer.hpp
            ./core/TextRenderer.hpp
            ./core/Texture.hpp
            ./core/resourceManagement/ResourceCache.hpp
            ./core/resourceManagement/ResourceContext.hpp
            ./core/ui/Anchor.hpp
            ./core/ui/Layout.hpp
            ./core/ui/LayoutElement.hpp
            ./core/ui/Size.hpp
            ./core/ui/VerticalLayout.hpp
            ./ecs/ComponentArray.hpp
            ./ecs/ComponentRegistry.hpp
            ./ecs/ECSUtility.hpp
            ./ecs/EntityManager.hpp
            ./ecs/IComponentArray.hpp
            ./ecs/components/AnchorComponent.hpp
            ./ecs/components/BoxColliderComponent.hpp
            ./ecs/components/ButtonComponent.hpp
            ./ecs/components/CircleColliderComponent.hpp
            ./ecs/components/DamageComponent.hpp
            ./ecs/components/HealthComponent.hpp
            ./ecs/components/IComponent.hpp
            ./ecs/components/LayoutComponent.hpp
            ./ecs/components/RigidBodyComponent.hpp
            ./ecs/components/SpriteComponent.hpp
            ./ecs/components/TextComponent.hpp
            ./ecs/components/TransformComponent.hpp
            ./ecs/components/VelocityComponent.hpp
            ./ecs/systems/MovementSystem.hpp
            ./ecs/systems/SpriteRenderSystem.hpp
            ./ecs/systems/TextRenderSystem.hpp
)

target_compile_features(${NAME} PRIVATE cxx_std_23)
target_link_libraries(${NAME}
    PRIVATE
        project_warnings
        OpenGL::GL
        Glad2CMake::glad2cmake
        SQLiteCpp
        Freetype::Freetype
        nlohmann_json::nlohmann_json
        glm::glm
        glfw
        spdlog::spdlog
        valijson
        fmt::fmt
)
target_include_directories(${NAME}
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
    PRIVATE
        ${Stb_INCLUDE_DIR}
)
